[workspace]
members = [
    "./subdir",
    "../shared",
    "/workspace/abs", 
    "relative"
]

[package]
name = "test-cargo-workspace"
version = "0.1.0"
edition = "2021"

[dependencies]
local-crate = { path = "./subdir" }
shared-crate = { path = "../shared" }
absolute-crate = { path = "/workspace/abs" }
relative-crate = { path = "relative" }
